# faust-vst-template

./: .gitignore  CMakeLists.txt  README.md
